# videoloop

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: config.yaml  prompts.yaml
dashboard/: README.md  build_static.py  server.py  store_run.py
dashboard/static/: app.js  index.html  style.css
docker/: Dockerfile  Dockerfile.base  Dockerfile.tools  build.sh
scripts/: agent_cli.py  precompress_videos.py  prepare_videomme.py  prepare_videommmu.py
scripts/whisperx/: Dockerfile  README.md  docker-compose.yml  whisperx_transcribe.py
tests/: test_activity_log.py  test_filesystem_context.py
video_agent/: __init__.py  agent.py  api_calls.py  config.py  config_loader.py  docker_runtime.py  file_memory.py  llm_api.py  logging_utils.py  message_utils.py  parallel_eval.py  token_tracker.py  tool_handlers.py  tools.py  transcript_cache.py
video_agent/memory/: __init__.py  orchestrator.py  utils.py
