[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "videoloop"
version = "0.1.0"
description = "VideoLoop: a native multimodal agent with LLM-orchestrated working memory for long-video understanding"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Philip Xu", email = "philipxjm1@gmail.com" },
]
keywords = ["video understanding", "multimodal", "agent", "long video", "benchmark"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "docker>=7.0",
    "httpx>=0.27",
    "pillow>=10.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
datasets = [
    "datasets>=2.19",
    "huggingface-hub>=0.23",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.urls]
Repository = "https://github.com/philipxjm/videoloop"

[tool.setuptools]
packages = ["video_agent", "video_agent.memory"]
